--- a/Newsawebpp/src/App.css
+++ b/Newsawebpp/src/App.css
@@ -55,7 +55,10 @@ body {
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.15);
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 10px;
   width: 100%;
+  flex-wrap: wrap;
 }
 .allnews{
   margin: 25px 25px 25px 25px;
