--- a/Newsawebpp/src/component/Navbar.css
+++ b/Newsawebpp/src/component/Navbar.css
@@ -4,7 +4,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 300px;
     overflow: hidden;
-    
+
     transition: transform 0.2s;
 }
 
@@ -44,4 +44,23 @@
 
 .read-more-button:hover {
     background-color: #0056b3;
+}
+
+
+/* page country part */
+
+select {
+    width: 100px;
+    padding: 6px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+option {
+    height: 20px;
+    width: 40px;
+    padding: 10px;
+
 }
